<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_shape"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_blocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blocks" />

        <RadioButton
            android:id="@+id/rb_pyramids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pyramids" />

        <RadioButton
            android:id="@+id/rb_tubes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tubes" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_base"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Height"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_length"
        android:inputType="numberDecimal"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_radius"
        android:inputType="numberDecimal"
        android:visibility="gone" />


    <EditText
        android:id="@+id/et_radius2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_second_radius"
        android:inputType="numberDecimal"
        android:visibility="gone" />


    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Result -" />
</LinearLayout>